Fixed center alignment of the button

--- a/ota-plus-web/app/reactapp/css/pages.scss
+++ b/ota-plus-web/app/reactapp/css/pages.scss
@@ -2222,6 +2222,7 @@
                         position: absolute;
                         left: 50%;
                         bottom: 20px;
+                        margin-left: -35px;
                         transform: translate(-50%, 0);
                     }
                 }
